SphereSim 2.2.4:
* Added a TwoDimArray class to greatly improve collision detection speed.
* Added a flag and methods to disable collision detection.

SphereSim 2.2.3:
* Improved Calculator performance.
* Added basic sphere collision detection, very slow.

SphereSim 2.2.2:
* Added changelog.
* Made FrameBuffer increase read index when full.
* Added methods to let Server sort spheres in cells.